--- a/react-journal/src/index.css
+++ b/react-journal/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .container {
   text-align: center;
   max-height: 100vh;
@@ -28,6 +34,19 @@ h3 {
   height: 40px;
   margin-left: 2rem;
   width: 40px;
+}
+
+.note {
+  background-color: #4a4e74;
+  padding: 2rem;
+  color: white;
+  text-align: left;
+  border-bottom: white 5px solid;
+}
+
+.note:hover {
+  cursor: pointer;
+  background-color: black;
 }
 
 .gutter {
