--- a/react-journal/src/index.css
+++ b/react-journal/src/index.css
@@ -11,6 +11,7 @@
 
 .side-bar-container {
   height: 100vh;
+  min-width: 40%;
 }
 
 .side-bar-header {
@@ -101,9 +102,17 @@ h3 {
 .sidebar-title {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0.5rem;
 }
 
 .delete-btn {
   outline: none;
   margin: none;
+  border: none;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  font-size: 1.5rem;
 }
